--- a/SOFT356 Project 2/SOFT356 Project 2.vcxproj.filters
+++ b/SOFT356 Project 2/SOFT356 Project 2.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Terrain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WorldGeneration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
