--- a/SOFT356 Project 2/SOFT356 Project 2.vcxproj.filters
+++ b/SOFT356 Project 2/SOFT356 Project 2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UIelement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WorldGeneration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UIelement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
