--- a/SOFT356 Project 2/SOFT356 Project 2.vcxproj
+++ b/SOFT356 Project 2/SOFT356 Project 2.vcxproj
@@ -157,14 +157,18 @@
   <ItemGroup>
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="SOFT356 Project 2.cpp" />
     <ClCompile Include="TextRendering.cpp" />
     <ClCompile Include="UIelement.cpp" />
+    <ClCompile Include="UIRenderer.cpp" />
+    <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TextRendering.h" />
-    <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="UIRenderer.h" />
+    <ClInclude Include="Utilities.h" />
     <ClInclude Include="UIelement.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelLoader.h" />
